--- a/cosmos-db-spark-3-databricks.ipynb
+++ b/cosmos-db-spark-3-databricks.ipynb
@@ -43,7 +43,7 @@
     "spark.conf.set(\"spark.sql.catalog.cosmosCatalog.spark.cosmos.accountKey\", cosmosMasterKey)\n",
     "\n",
     "spark.sql(\"CREATE DATABASE IF NOT EXISTS cosmosCatalog.{};\".format(cosmosDatabaseName))\n",
-    "spark.sql(\"CREATE TABLE IF NOT EXISTS cosmosCatalog.{}.{} using cosmos.items TBLPROPERTIES(partitionKeyPath = '/id', manualThroughput = '1100')\".format(cosmosDatabaseName, cosmosContainerName))\n",
+    "spark.sql(\"CREATE TABLE IF NOT EXISTS cosmosCatalog.{}.{} using cosmos.oltp TBLPROPERTIES(partitionKeyPath = '/id', manualThroughput = '1100')\".format(cosmosDatabaseName, cosmosContainerName))\n",
     "\n"
    ]
   },
@@ -75,7 +75,7 @@
     "df\\\n",
     "   .toDF(\"date\",\"hour\",\"birth_year\",\"sex\",\"province\",\"city\",\"id\")\\\n",
     "   .write\\\n",
-    "   .format(\"cosmos.items\")\\\n",
+    "   .format(\"cosmos.oltp\")\\\n",
     "   .options(**writeCfg)\\\n",
     "   .mode(\"APPEND\")\\\n",
     "   .save()\n"
@@ -103,11 +103,11 @@
     "  \"spark.cosmos.database\": cosmosDatabaseName,\n",
     "  \"spark.cosmos.container\": cosmosContainerName,\n",
     "  \"spark.cosmos.partitioning.strategy\": \"Restrictive\",\n",
-    "  \"spark.cosmos.read.inferSchemaEnabled\" : \"false\"\n",
+    "  \"spark.cosmos.read.inferSchema.enabled\" : \"false\"\n",
     "}\n",
     "\n",
     "#Read the data into a Spark dataframe and print the count\n",
-    "query_df = spark.read.format(\"cosmos.items\").options(**readCfg).load()\n",
+    "query_df = spark.read.format(\"cosmos.oltp\").options(**readCfg).load()\n",
     "print(query_df.count())\n"
    ]
   }
